# FluxMQ

./: .clang-format  .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  docker-compose.monitoring.yml  docker-compose.yml
.github/workflows/: ci.yml
docker/: entrypoint.sh
include/: buffer.h  cluster_store.h  codec.h  connection.h  crc32.h  errors.h  group_coordinator.h  handler.h  leader_elector.h  log.h  metrics.h  metrics_server.h  partition.h  producer_state.h  protocol.h  reactor.h  replica_client.h  replication_manager.h  segment.h  server.h  topic.h  topic_manager.h
memory/: MEMORY.md  project_context.md
monitoring/: prometheus-standalone.yml  prometheus.yml
monitoring/grafana/dashboards/: fluxmq.json
monitoring/grafana/provisioning/dashboards/: dashboards.yml
scripts/: build.sh  check.sh  ci.sh  clean.sh  common.sh  deploy.sh  format.sh  lint.sh  run.sh  test.sh
sdk/: go.mod
sdk/cmd/fluxmq/: cluster.go  consume.go  main.go  produce.go  topic.go
sdk/cmd/fluxmq-bench/: bench_consume.go  bench_e2e.go  bench_produce.go  main.go  stats.go
sdk/fluxmq/: client.go  cluster_client.go  codec.go  conn.go  consumer.go  errors.go  producer.go
sdk/tests/: integration_test.go
src/: CMakeLists.txt  buffer.cpp  cluster_store.cpp  connection.cpp  group_coordinator.cpp  handler.cpp  leader_elector.cpp  log.cpp  main.cpp  metrics.cpp  metrics_server.cpp  partition.cpp  reactor.cpp  replica_client.cpp  replication_manager.cpp  segment.cpp  server.cpp  topic.cpp  topic_manager.cpp
terraform/: main.tf  outputs.tf  user_data.sh.tpl  variables.tf
tests/: CMakeLists.txt  test_broker.cpp  test_chaos.cpp  test_log.cpp  test_server.cpp
